# fpl-platform

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  leagues.py  managers.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  gameweek.py  league.py  manager.py
backend/app/schemas/: analytics.py  league.py  manager.py
backend/app/services/: analytics.py  cache.py  fpl_api.py
backend/app/utils/: helpers.py
backend/tests/: conftest.py
database/: init.sql
database/migrations/: 001_initial_schema.sql
frontend/: Dockerfile  app.py  requirements.txt
frontend/assets/: style.css
frontend/callbacks/: dashboard.py
frontend/components/: dashboard.py
frontend/layouts/: main.py  navigation.py
frontend/utils/: api_client.py
nginx/: Dockerfile  nginx.conf
nginx/sites-available/: fpl-platform.conf
scripts/: deploy.sh  dev.sh  logs.sh  reset.sh  seed_data.py  setup.sh  start.sh  stop.sh
